temporary fix for output overflow

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -37,8 +37,9 @@ p {
 
 #output {
     text-align: center;
-    border: dotted .5px red;
     border-radius: 30px 30px 0 0;
+    overflow-wrap: break-word;
+    //overflow: hidden;
 
     padding: .8rem;
     
